--- a/scss/global.scss
+++ b/scss/global.scss
@@ -29,18 +29,11 @@ button {
 	max-width: calc(#{$maxWidthContainer + px} + 30px); // Enter the value
 	margin: 0 auto;
 	padding: 0px 15px;
-	@media (min-width: 1920px) {
-		max-width: calc(768px + #{$maxWidthContainer - 768} * ((100vw - 320px) / #{$maxWidth - 320}));
-	}
 }
 
 [class*="__container-big"] {
 	@extend [class*="__container"];
 	max-width: calc(1320px + 30px);
-
-	@media (min-width: 1920px) {
-		max-width: calc(768px + (1320 + 30 - 768) * ((100vw - 320px) / #{$maxWidth - 320}));
-	}
 }
 
 %visible {
@@ -83,19 +76,20 @@ section {
 .underline {
 	position: relative;
 	&::after {
-		transition: width 0.3s ease 0s;
-		left: 50%;
-		transform: translate(-50%, 0);
+		transition: transform 0.3s ease 0s;
+		left: 0;
+		transform: scaleX(0);
+		transform-origin: center;
 		content: " ";
 		position: absolute;
 		bottom: 0;
-		width: 0%;
+		width: 100%;
 		height: 2px;
 		background-color: var(--main-color);
 	}
 	&:hover {
 		&::after {
-			width: 100%;
+			transform: scaleX(1);
 		}
 	}
 }
@@ -108,7 +102,7 @@ section {
 		border-radius: $defautBorderRadius;
 		color: var(--base-color);
 		font-weight: 700;
-		font-size: rem(14px, 1000);
+		font-size: rem(14px);
 		line-height: 1.43em;
 		transition: all 0.3s ease 0s;
 		&:hover {
@@ -205,120 +199,4 @@ section {
 .addres__mail {
 }
 .phone {
-}
-
-._anim {
-	&-item {
-		transition: all 0.8s ease 0s !important;
-	}
-	&-delay {
-		&_200 {
-			transition: all 0.8s ease 0.2s !important;
-		}
-		&_400 {
-			transition: all 0.8s ease 0.4s !important;
-		}
-		&_600 {
-			transition: all 0.8s ease 0.6s !important;
-		}
-		&_800 {
-			transition: all 0.8s ease 0.8s !important;
-		}
-		&_1000 {
-			transition: all 0.8s ease 1s !important;
-		}
-	}
-	&-translate {
-		&_top {
-			&._not-active {
-				transform: translateY(-100%);
-				opacity: 0;
-				@media (max-width: em(991px, $base-font-size)) {
-					transform: translateY(0) translateX(-100%);
-				}
-			}
-		}
-		&_right {
-			&._not-active {
-				transform: translateX(100%);
-				opacity: 0;
-				@media (max-width: em(991px, $base-font-size)) {
-					transform: translateX(0) translateY(100%);
-				}
-			}
-		}
-		&_bottom {
-			&._not-active {
-				transform: translateY(100%);
-				opacity: 0;
-				@media (max-width: em(991px, $base-font-size)) {
-					transform: translateY(0) translateX(100%);
-				}
-			}
-		}
-		&_left {
-			&._not-active {
-				transform: translateX(-100%);
-				opacity: 0;
-				@media (max-width: em(991px, $base-font-size)) {
-					transform: translateX(0) translateY(-100%);
-				}
-			}
-		}
-		&_z {
-			position: relative;
-			z-index: -5;
-		}
-	}
-	&-scale {
-		&._not-active {
-			transform: scale(0.75);
-			opacity: 0;
-		}
-	}
-	&-linear-block {
-		animation-duration: 2s;
-		animation-timing-function: ease-in;
-		animation-fill-mode: forwards;
-		&._not-active {
-			animation: none;
-		}
-		&_left {
-			@extend ._anim-linear-block;
-			animation-name: linear-block-left;
-		}
-		&_right {
-			@extend ._anim-linear-block;
-			animation-name: linear-block-right;
-		}
-	}
-}
-
-@keyframes linear-block-left {
-	0% {
-		transform: scaleX(0.15) translateX(2100px);
-	}
-	50% {
-		transform: scaleX(0.15) translateX(-2100px);
-	}
-	75% {
-		transform: translateX(0px);
-	}
-	100% {
-		transfrom: scaleX(1) translateX(0);
-	}
-}
-@keyframes linear-block-right {
-	0% {
-		transform: scaleX(0.15) translateX(-2100px);
-	}
-	50% {
-		transform: scaleX(0.15) translateX(2100px);
-	}
-	75% {
-		transform: translateX(0px);
-	}
-	100% {
-		transfrom: scaleX(1) translateX(0);
-	}
 }
