--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -53,3 +53,123 @@ html {
 		background-color: #666;
 	}
 }
+
+//* Theme changing ==>
+
+html.dark {
+	//* Header
+	.login-list__link {
+		&.icon-facebook {
+			&::before {
+				content: url("data:image/svg+xml;charset=UTF-8,<svg width='13' height='13' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M12 0C5.373 0 0 5.373 0 12C0 18.016 4.432 22.984 10.206 23.852V15.18H7.237V12.026H10.206V9.927C10.206 6.452 11.899 4.927 14.787 4.927C16.17 4.927 16.902 5.03 17.248 5.076V7.829H15.278C14.052 7.829 13.624 8.992 13.624 10.302V12.026H17.217L16.73 15.18H13.624V23.877C19.481 23.083 24 18.075 24 12C24 5.373 18.627 0 12 0Z' fill='%233bcfaf'/></svg>");
+			}
+		}
+		&.icon-google {
+			&::before {
+				content: url("data:image/svg+xml;charset=UTF-8,<svg width='13' height='13' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M12.0039 0C5.375 0 0 5.37109 0 12C0 18.6289 5.375 24 12.0039 24C22.0156 24 24.2695 14.707 23.3281 10H12V14H19.7383C18.8477 17.4492 15.7266 20 12 20C7.58203 20 4 16.418 4 12C4 7.58203 7.58203 4 12 4C14.0078 4 15.8398 4.74609 17.2461 5.96875L20.0859 3.12891C17.9531 1.18359 15.1172 0 12.0039 0Z' fill='%233bcfaf'/></svg>");
+			}
+		}
+		&.icon-twitter {
+			&::before {
+				content: url("data:image/svg+xml;charset=UTF-8,<svg width='13' height='13' viewBox='0 0 26 22' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M8.17648 21.1264C17.9878 21.1264 23.3542 12.9978 23.3542 5.9486C23.3542 5.71772 23.3542 5.48788 23.3386 5.25908C24.3826 4.50395 25.2838 3.56896 26 2.49788C25.0265 2.92948 23.9937 3.2124 22.9362 3.33716C24.0498 2.67057 24.8833 1.62201 25.2814 0.386673C24.2343 1.00809 23.0887 1.44599 21.8941 1.68148C21.0898 0.826267 20.0261 0.259968 18.8675 0.0702136C17.709 -0.119539 16.5202 0.0778297 15.4851 0.631787C14.4501 1.18574 13.6264 2.06538 13.1416 3.13461C12.6569 4.20383 12.538 5.40302 12.8034 6.5466C10.6826 6.44021 8.6079 5.88905 6.71391 4.92889C4.81992 3.96872 3.14899 2.62101 1.8096 0.973237C1.12746 2.14757 0.918528 3.53774 1.22536 4.8607C1.53219 6.18366 2.3317 7.33994 3.46112 8.09412C2.61217 8.06925 1.7817 7.84022 1.04 7.42644V7.49404C1.04034 8.72563 1.46667 9.91918 2.24669 10.8723C3.02672 11.8254 4.1124 12.4794 5.3196 12.7232C4.53427 12.9374 3.71028 12.9687 2.91096 12.8147C3.25197 13.8746 3.91563 14.8014 4.80918 15.4656C5.70272 16.1298 6.78148 16.4982 7.89464 16.5192C6.78864 17.3886 5.52209 18.0313 4.16745 18.4107C2.8128 18.7901 1.39665 18.8987 0 18.7303C2.43949 20.2957 5.27792 21.1261 8.17648 21.1223' fill='%233bcfaf'/></svg>");
+			}
+		}
+	}
+
+	//* Index
+	.hero {
+		background: linear-gradient(90deg, rgba(0, 0, 0, 1) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0.3) 80%),
+			url(../img/hero-bg.jpg) 50% 50% / cover no-repeat;
+	}
+	.features {
+		filter: drop-shadow(0px 4px 4px rgba(256, 256, 256, 0.15));
+	}
+	.brings {
+		&-bg__2 {
+			background-color: var(--accent-color);
+		}
+		&-text__1 span::after {
+			content: url("data:image/svg+xml;charset=UTF-8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='25' height='19' viewBox='0 0 25 19'><path d='M0.414429 10.5033H20.901L14.1242 17.1923L15.6099 18.6588L23.3249 11.0178H23.351L24.8106 9.57711L23.351 8.11066H23.3249L15.6099 0.469727L14.1242 1.93617L20.7446 8.44512H0.414429V10.5033Z' fill='%237cdfc3'/></svg>");
+		}
+	}
+	.employers__wrapper {
+		background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%),
+			url(../img/employers.jpg);
+		@media (max-width: em(767px, $base-font-size)) {
+			background-image: linear-gradient(
+					90deg,
+					rgba(0, 0, 0, 0.9) 10%,
+					rgba(0, 0, 0, 0.8) 50%,
+					rgba(0, 0, 0, 0.7) 90%
+				),
+				url(../img/employers.jpg);
+		}
+		@media (max-width: em(575px, $base-font-size)) {
+			background-image: linear-gradient(
+					90deg,
+					rgba(0, 0, 0, 0.85) 10%,
+					rgba(0, 0, 0, 0.8) 50%,
+					rgba(0, 0, 0, 0.85) 90%
+				),
+				url(../img/employers.jpg);
+		}
+	}
+
+	//* Footer
+	.footer {
+		color: var(--main-color);
+		background-color: var(--light-color);
+		a,
+		p,
+		button {
+			color: var(--main-color);
+		}
+		&-menu {
+			&__logo {
+				svg,
+				svg path {
+					fill: var(--main-color);
+				}
+			}
+			&__block li:after {
+				background-color: var(--main-color);
+			}
+		}
+	}
+	.contact {
+		&__form {
+			border-color: var(--main-color);
+			button {
+				transition: all 0.3s ease 0s;
+				background-color: var(--accent-blue);
+				&:hover {
+					background-color: transparent;
+					svg,
+					svg path {
+						fill: var(--accent-color);
+					}
+					filter: drop-shadow(0px 1px 3px var(--accent-color));
+				}
+			}
+			input,
+			input::placeholder {
+				color: var(--main-color);
+			}
+		}
+		&__link {
+			svg,
+			svg path {
+				fill: var(--main-color);
+			}
+		}
+	}
+	.main-footer hr {
+		background-color: var(--main-color);
+	}
+	.rights-footer__link {
+		border-color: var(--main-color);
+		a:after {
+			background-color: var(--main-color);
+		}
+	}
+}
